--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
   <title>D3-Celestial Star Map</title>
@@ -7,10 +7,13 @@
   <script type="text/javascript" src="../celestial.js"></script>
   <script src="https://fastcdn.org/FileSaver.js/1.1.20151003/FileSaver.min.js"></script>
   <link rel="stylesheet" href="../celestial.css">
-</head><body>
+</head>
 
-<button onclick="mirrorImage()">flip</button>
-<button onclick="downloadImage()">download</button>
+<body>
+    <div style="display:block; margin-left:40px">
+        <button onclick="mirrorImage()">flip</button>
+        <button onclick="downloadImage()">download</button>
+    </div>
 
 <script type="text/javascript">
 /* D3-Celestial sky map
@@ -19,13 +22,13 @@
    or roll your own with the format template in templ.json
 */
 var config = {
-  width: 3600,     // Default width, 0 = full parent width; height is determined by projection
+  width: 7200,     // Default width, 0 = full parent width; height is determined by projection
   projection: "equirectangular",  // Map projection used: airy, aitoff, armadillo, august, azimuthalEqualArea, azimuthalEquidistant, baker, berghaus, boggs, bonne, bromley, collignon, craig, craster, cylindricalEqualArea, cylindricalStereographic, eckert1, eckert2, eckert3, eckert4, eckert5, eckert6, eisenlohr, equirectangular, fahey, foucaut, ginzburg4, ginzburg5, ginzburg6, ginzburg8, ginzburg9, gringorten, hammer, hatano, healpix, hill, homolosine, kavrayskiy7, lagrange, larrivee, laskowski, loximuthal, mercator, miller, mollweide, mtFlatPolarParabolic, mtFlatPolarQuartic, mtFlatPolarSinusoidal, naturalEarth, nellHammer, orthographic, patterson, polyconic, rectangularPolyconic, robinson, sinusoidal, stereographic, times, twoPointEquidistant, vanDerGrinten, vanDerGrinten2, vanDerGrinten3, vanDerGrinten4, wagner4, wagner6, wagner7, wiechel, winkel3
   transform: "equatorial", // Coordinate transformation: equatorial (default), ecliptic, galactic, supergalactic
   center: null,       // Initial center coordinates in equatorial transformation [hours, degrees, degrees],
                       // otherwise [degrees, degrees, degrees], 3rd parameter is orientation, null = default center
   orientationfixed: true,  // Keep orientation angle the same as center[2]
-  background: { fill: "rgba(0, 0, 0, 1)", stroke: "rgba(0, 0, 0, 1)", opacity: 0 }, // Background style
+  background: { fill: "rgba(0, 0, 0, 0)", stroke: "rgba(0, 0, 0, 0)", opacity: 0 }, // Background style
   adaptable: true,    // Sizes are increased with higher zoom-levels
   interactive: true,  // Enable zooming and rotation with mousewheel and dragging
   form: false,        // Display settings form
@@ -40,20 +43,20 @@ var config = {
     limit: 6,      // Show only stars brighter than limit magnitude
     colors: true,  // Show stars in spectral colors, if not use "color"
     style: { fill: "#ffffff", opacity: 1 }, // Default style for stars
-    names: true,   // Show star names (Bayer, Flamsteed, Variable star, Gliese, whichever applies first)
-    proper: true, // Show proper name (if present)
+    names:  false,   // Show star names (Bayer, Flamsteed, Variable star, Gliese, whichever applies first)
+    proper: false, // Show proper name (if present)
     desig: false,  // Show all names, including Draper and Hipparcos
     namelimit: 2.5,  // Show only names for stars brighter than namelimit
-    namestyle: { fill: "#ddddbb", font: "11px Georgia, Times, 'Times Roman', serif", align: "left", baseline: "top" },
-    propernamestyle: { fill: "#ddddbb", font: "11px Georgia, Times, 'Times Roman', serif", align: "right", baseline: "bottom" },
+    namestyle: { fill: "#6f6f6f", font: "11px Helvetica, Arial, sans-serif", align: "left", baseline: "top" },
+    propernamestyle: { fill: "#6f6f6f", font: "11px Helvetica, Arial, sans-serif", align: "right", baseline: "bottom" },
     propernamelimit: 1.5,  // Show proper names for stars brighter than propernamelimit
-    size: 3,       // Maximum size (radius) of star circle in pixels
+    size: 5,       // Maximum size (radius) of star circle in pixels
     exponent: -0.28, // Scale exponent for star size, larger = more linear
     //data: 'stars.6.json' // Data source for stellar data
     data: 'stars.8.json' // Alternative deeper data source for stellar data
   },
   dsos: {
-    show: true,    // Show Deep Space Objects
+    show: false,    // Show Deep Space Objects
     limit: 6,      // Show only DSOs brighter than limit magnitude
     names: false,   // Show DSO names
     desig: false,   // Show short DSO names
@@ -85,10 +88,10 @@ var config = {
     }
   },
   constellations: {
-    show: true,    // Show constellations
+    show: false,    // Show constellations
     names: true,   // Show constellation names
     desig: true,   // Show short constellation names (3 letter designations)
-    namestyle: { fill:"#cccc99", align: "center", baseline: "middle", opacity:0.8,
+    namestyle: { fill:"#cccc99", align: "center", baseline: "middle", opacity:1,
 		             font: ["bold 14px Helvetica, Arial, sans-serif",  // Different fonts for brighter &
 								        "bold 12px Helvetica, Arial, sans-serif",  // sdarker constellations
 												"bold 11px Helvetica, Arial, sans-serif"]},
@@ -99,16 +102,17 @@ var config = {
   },
   mw: {
     show: true,    // Show Milky Way as filled polygons
-    style: { fill: "#ffffff", opacity: "0.15" }
+    style: { fill: "#020202", opacity: "0.9" }
   },
   lines: {
-    graticule: { show: true, stroke: "#cccccc", width: 0.6, opacity: 0.8,      // Show graticule lines
+    graticule: { show: false, stroke: "#cccccc", width: 0.6, opacity: 0.8      // Show graticule lines
 			// grid values: "outline", "center", or [lat,...] specific position
-      lon: {pos: ["center"], fill: "#eee", font: "10px Helvetica, Arial, sans-serif"},
+      //lon: {pos: ["center"], fill: "#eee", font: "10px Helvetica, Arial, sans-serif"},
 			// grid values: "outline", "center", or [lon,...] specific position
-		  lat: {pos: ["center"], fill: "#eee", font: "10px Helvetica, Arial, sans-serif"}},
-    equatorial: { show: true, stroke: "#aaaaaa", width: 1.3, opacity: 0.7 },    // Show equatorial plane
-    ecliptic: { show: true, stroke: "#66cc66", width: 1.3, opacity: 0.7 },      // Show ecliptic plane
+          //lat: {pos: ["center"], fill: "#eee", font: "10px Helvetica, Arial, sans-serif"}
+    },
+    equatorial: { show: false, stroke: "#aaaaaa", width: 1.3, opacity: 0.7 },    // Show equatorial plane
+    ecliptic: { show: false, stroke: "#aaaaaa", width: 1.3, opacity: 0.7 },      // Show ecliptic plane
     galactic: { show: false, stroke: "#cc6666", width: 1.3, opacity: 0.7 },     // Show galactic plane
     supergalactic: { show: false, stroke: "#cc66cc", width: 1.3, opacity: 0.7 } // Show supergalactic plane
 }};
@@ -145,6 +149,9 @@ function mirrorImage() {
 }
 
 function flipImageHorizontally() {
+    // clear previous canvas
+    ctx.clearRect(0, 0, canvas.width, canvas.height)
+
 	// move to img's width
     ctx.translate(img.width, 0);
 
