--- a/2_constellation_designation.html
+++ b/2_constellation_designation.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -29,7 +29,7 @@ var config = {
   center: null,       // Initial center coordinates in equatorial transformation [hours, degrees, degrees],
                       // otherwise [degrees, degrees, degrees], 3rd parameter is orientation, null = default center
   orientationfixed: true,  // Keep orientation angle the same as center[2]
-  background: { fill: "rgba(0, 0, 0, 1)", stroke: "rgba(0, 0, 0, 1)", opacity: 0 }, // Background style
+  background: { fill: "rgba(0, 0, 0, 0)", stroke: "rgba(0, 0, 0, 0)", opacity: 0 }, // Background style
   adaptable: false,    // Sizes are increased with higher zoom-levels
   interactive: false,  // Enable zooming and rotation with mousewheel and dragging
   form: false,        // Display settings form
@@ -42,56 +42,56 @@ var config = {
   stars: {
     show: false,    // Show stars
     limit: 6,      // Show only stars brighter than limit magnitude
-    colors: false,  // Show stars in spectral colors, if not use "color"
-    style: { fill: "rgba(0,0,0,0)", opacity: 0 }, // Default style for stars
+    colors: true,  // Show stars in spectral colors, if not use "color"
+    style: { fill: "#ffffff", opacity: 1 }, // Default style for stars
     names:  false,   // Show star names (Bayer, Flamsteed, Variable star, Gliese, whichever applies first)
-    proper: true, // Show proper name (if present)
+    proper: false, // Show proper name (if present)
     desig: false,  // Show all names, including Draper and Hipparcos
-    namelimit: 3,  // Show only names for stars brighter than namelimit
-    namestyle: { fill: "#6f6f6f", font: "48px Helvetica, Arial, sans-serif", align: "left", baseline: "top" },
-    propernamestyle: { fill: "#6f6f6f", font: "48px Helvetica, Arial, sans-serif", align: "right", baseline: "bottom" },
+    namelimit: 2.5,  // Show only names for stars brighter than namelimit
+    namestyle: { fill: "#6f6f6f", font: "11px Helvetica, Arial, sans-serif", align: "left", baseline: "top" },
+    propernamestyle: { fill: "#6f6f6f", font: "11px Helvetica, Arial, sans-serif", align: "right", baseline: "bottom" },
     propernamelimit: 1.5,  // Show proper names for stars brighter than propernamelimit
-    size: 0,       // Maximum size (radius) of star circle in pixels
+    size: 24,       // Maximum size (radius) of star circle in pixels
     exponent: -0.28, // Scale exponent for star size, larger = more linear
     //data: 'stars.6.json' // Data source for stellar data
     data: 'stars.8.json' // Alternative deeper data source for stellar data
   },
   dsos: {
-    show: true,    // Show Deep Space Objects
+    show: false,    // Show Deep Space Objects
     limit: 4,      // Show only DSOs brighter than limit magnitude
-    names: true,   // Show DSO names
-    desig: true,   // Show short DSO names
+    names: false,   // Show DSO names
+    desig: false,   // Show short DSO names
     namelimit: 4,  // Show only names for DSOs brighter than namelimit
-    namestyle: { fill: "#ffffff", font: "48px Helvetica, Arial, serif", align: "left", baseline: "top" },
+    namestyle: { fill: "#cccccc", font: "11px Helvetica, Arial, serif", align: "left", baseline: "top" },
     size: 60,    // Optional seperate scale size for DSOs, null = stars.size
     exponent: 1.4, // Scale exponent for DSO size, larger = more non-linear
     data: 'dsos.14.json',  // Data source for DSOs
     //data: 'dsos.6.json'  // Alternative broader data source for DSOs
     //data: 'dsos.14.json' // Alternative deeper data source for DSOs
     symbols: {  //DSO symbol styles
-        gg: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                 // Galaxy cluster
-        g: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Generic galaxy
-        s: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Spiral galaxy
-        s0: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "#rgba(0,0,0,0)", width: 1.5 },                                // Lenticular galaxy
-        sd: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Dwarf galaxy
-        e: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Elliptical galaxy
-        i: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Irregular galaxy
-      oc: {shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5},  // Open cluster
-      gc: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                 // Globular cluster
-      en: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                 // Emission nebula
-      bn: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 2 },    // Generic bright nebula
-      sfr: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 2 },    // Star forming region
-      rn: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                 // Reflection nebula
-      pn: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Planetary nebula
-      snr: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 1.5 },                                // Supernova remnant
-      dn: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)", width: 2 },    // Dark nebula grey
-      pos: { shape: "circle", fill: "rgba(0,0,0,0)", stroke: "rgba(0,0,0,0)c", width: 1.5 }   // Generic marker
+        gg: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                 // Galaxy cluster
+        g: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                // Generic galaxy
+        s: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                // Spiral galaxy
+        s0: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                // Lenticular galaxy
+        sd: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                // Dwarf galaxy
+        e: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                // Elliptical galaxy
+        i: { shape: "circle", fill: "#ff0000", stroke: "#ff0000", width: 1.5 },                                // Irregular galaxy
+      oc: {shape: "circle", fill: "#ffcc00", stroke: "#ffcc00", width: 1.5},  // Open cluster
+      gc: { shape: "circle", fill: "#ff9900", stroke: "#ff9900", width: 1.5 },                                 // Globular cluster
+      en: { shape: "circle", fill: "#ff00cc", stroke: "#ff00cc", width: 1.5 },                                 // Emission nebula
+      bn: { shape: "circle", fill: "#ff00cc", stroke: "#ff00cc", width: 2 },    // Generic bright nebula
+      sfr: { shape: "circle", fill: "#cc00ff", stroke: "#cc00ff", width: 2 },    // Star forming region
+      rn: { shape: "circle", fill: "#00ooff", stroke: "#00ooff", width: 1.5 },                                 // Reflection nebula
+      pn: { shape: "circle", fill: "#00cccc", stroke: "#00cccc", width: 1.5 },                                // Planetary nebula
+      snr: { shape: "circle", fill: "#ff00cc", stroke: "#ffcc00", width: 1.5 },                                // Supernova remnant
+      dn: { shape: "circle", fill: "#999999", stroke: "#999999", width: 2 },    // Dark nebula grey
+      pos: { shape: "circle", fill: "#cccccc", stroke: "#cccccc", width: 1.5 }   // Generic marker
     }
   },
   constellations: {
-    show: false,    // Show constellations
-    names: false,   // Show constellation names
-    desig: false,   // Show short constellation names (3 letter designations)
+    show: true,    // Show constellations
+    names: true,   // Show constellation names
+    desig: true,   // Show short constellation names (3 letter designations)
     namestyle: { fill:"#cccc99", align: "center", baseline: "middle", opacity:1,
 		             font: ["bold 56px Helvetica, Arial, sans-serif",  // Different fonts for brighter &
 								        "bold 12px Helvetica, Arial, sans-serif",  // sdarker constellations
